fixing sizing of mobile book showcase on tablet by removing height, setting margin-bottom to -40px

--- a/static/css/components/mybooks-details.less
+++ b/static/css/components/mybooks-details.less
@@ -125,11 +125,10 @@
   .showcase {
     display: flex;
     background-color: @lightest-grey;
-    height: 12vh;
     gap: 15px;
     padding: 0 15px;
     padding-top: 20px;
-    margin-bottom: -10px;
+    margin-bottom: -40px;
   }
 
   .showcase__item {
